--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,35 +1,38 @@
 @tailwind base;
 @tailwind components;
+
 html {
   @apply font-body antialiased;
 }
 
 @tailwind utilities;
+
 .container {
   max-width: 600px;
-}
-@screen sm {
-  .container {
+
+  @screen sm {
     max-width: 700px;
   }
-}
-@screen md {
-  .container {
+
+  @screen md {
     max-width: 850px;
   }
 }
 
 .twitter-card {
   @apply mt-8 mb-8 rounded bg-yellow-lighter px-6 py-8 sm:mt-10 sm:mb-10 md:px-10;
-}
-.twitter-card .twitter-card-title {
-  @apply mt-0 font-body text-lg font-normal text-blue-dark dark:text-blue-dark sm:text-xl;
-}
-.twitter-card .twitter-card-source {
-  @apply block pt-2 font-body text-sm font-light text-blue-dark underline;
-}
-.twitter-card .twitter-card-btn {
-  @apply mt-8 mb-0 inline-block border border-blue-dark px-5 py-2 font-body font-semibold text-blue-dark no-underline transition-colors hover:bg-primary hover:text-white sm:mb-4;
+
+  & &-title {
+    @apply mt-0 font-body text-lg font-normal text-blue-dark dark:text-blue-dark sm:text-xl;
+  }
+
+  & &-source {
+    @apply block pt-2 font-body text-sm font-light text-blue-dark underline;
+  }
+
+  & &-btn {
+    @apply mt-8 mb-0 inline-block border border-blue-dark px-5 py-2 font-body font-semibold text-blue-dark no-underline transition-colors hover:bg-primary hover:text-white sm:mb-4;
+  }
 }
 
 [x-cloak] {
@@ -47,5 +50,3 @@ h2 {
 h3 {
   @apply pb-3 font-body text-2xl md:text-3xl lg:text-4xl font-semibold text-primary dark:text-white;
 }
-
-/*# sourceMappingURL=main.css.map */
