--- a/components/hello-world.html
+++ b/components/hello-world.html
@@ -1,3 +1,3 @@
-<h1 class="pt-3 font-body text-4xl font-semibold text-primary dark:text-white md:text-5xl lg:text-6xl">Hello World!</h1>
+<h2 class="pt-3 font-body text-3xl md:text-4xl lg:text-5xl font-semibold text-primary dark:text-white">Hello World!</h2>
 
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse illum, consequatur ipsam eveniet eius, veritatis neque ipsum, distinctio harum accusamus porro qui numquam. Impedit saepe obcaecati aspernatur temporibus, voluptatibus quis.</p>
+<p>This is a component content included dynamically from a file.</p>
