change logos and colors to more alpinejs-like

--- a/partials/footer.html
+++ b/partials/footer.html
@@ -2,20 +2,16 @@
   <div class="flex flex-col items-center justify-between border-t border-grey-lighter py-10 sm:flex-row sm:py-12">
     <div class="mr-auto flex flex-col items-center sm:flex-row">
       <a x-link href="/" class="mr-auto sm:mr-6">
-        <img src="/assets/img/logo.svg" alt="logo" />
+        <img src="/assets/img/logo-alpinejs.svg" alt="AlpineJS logo" class="h-8" />
       </a>
       <p class="pt-5 font-body font-light text-primary dark:text-white sm:pt-0">&copy;2023 John Doe.</p>
     </div>
     <div class="mr-auto flex items-center pt-5 sm:mr-0 sm:pt-0">
-      <a x-link href="https://github.com/" target="_blank" rel="noopenner">
+      <a href="https://github.com/" title="Open GitHub" target="_blank" rel="noopenner">
         <i class="text-4xl text-primary dark:text-white pl-5 hover:text-secondary dark:hover:text-secondary transition-colors bx bxl-github"></i>
       </a>
 
-      <a x-link href="https://codepen.io/" target="_blank" rel="noopenner">
-        <i class="text-4xl text-primary dark:text-white pl-5 hover:text-secondary dark:hover:text-secondary transition-colors bx bxl-codepen"></i>
-      </a>
-
-      <a x-link href="https://www.linkedin.com/" target="_blank" rel="noopenner">
+      <a href="https://www.linkedin.com/" title="Open LinkedIn" target="_blank" rel="noopenner">
         <i class="text-4xl text-primary dark:text-white pl-5 hover:text-secondary dark:hover:text-secondary transition-colors bx bxl-linkedin"></i>
       </a>
     </div>
