--- a/partials/header.html
+++ b/partials/header.html
@@ -3,9 +3,7 @@
   <div class="container mx-auto">
     <div class="flex items-center justify-between py-6 lg:py-10" x-cloak>
       <a x-link href="/" class="flex items-center">
-        <span href="/" class="mr-2">
-          <img src="/assets/img/logo.svg" alt="logo" />
-        </span>
+        <img src="/assets/img/logo-alpinejs.svg" alt="logo" class="h-10 mr-3" />
         <p class="font-body text-xl lg:text-2xl font-bold text-primary dark:text-white lg:block">John Doe</p>
       </a>
       <div class="flex items-center lg:hidden">
