--- a/components/hello-world.html
+++ b/components/hello-world.html
@@ -1,3 +1,5 @@
-<h2 class="pt-3 font-body text-3xl md:text-4xl lg:text-5xl font-semibold text-primary dark:text-white">Hello World!</h2>
+<div>
+  <h2 class="pt-3 font-body text-3xl md:text-4xl lg:text-5xl font-semibold text-primary dark:text-white">Hello World!</h2>
 
-<p>This is a component content included dynamically from a file.</p>
+  <p>This is a component content included dynamically from a file.</p>
+</div>
