--- a/partials/header.html
+++ b/partials/header.html
@@ -1,7 +1,7 @@
 <div>
 
-  <div class="container mx-auto">
-    <div class="flex items-center justify-between py-6 lg:py-10" x-cloak>
+  <navbar class="block container mx-auto">
+    <nav class="flex items-center justify-between py-6 lg:py-10" x-cloak>
       <a x-link href="/" class="flex items-center">
         <img src="/assets/img/logo-alpinejs.svg" alt="logo" class="h-10 mr-3" />
         <p class="font-body text-xl lg:text-2xl font-bold text-primary dark:text-white lg:block">John Doe</p>
@@ -26,12 +26,12 @@
 
           <li class="group relative mr-6 mb-1">
             <div class="absolute left-0 bottom-0 z-20 h-0 w-full opacity-75 transition-all group-hover:h-2 group-hover:bg-yellow"></div>
-            <a x-link href="/blog" class="relative z-30 block px-2 font-body text-lg font-medium text-primary transition-colors group-hover:text-green dark:text-white dark:group-hover:text-secondary">Blog</a>
+            <a x-link href="/about" class="relative z-30 block px-2 font-body text-lg font-medium text-primary transition-colors group-hover:text-green dark:text-white dark:group-hover:text-secondary">About</a>
           </li>
 
           <li class="group relative mr-6 mb-1">
             <div class="absolute left-0 bottom-0 z-20 h-0 w-full opacity-75 transition-all group-hover:h-2 group-hover:bg-yellow"></div>
-            <a x-link href="/about" class="relative z-30 block px-2 font-body text-lg font-medium text-primary transition-colors group-hover:text-green dark:text-white dark:group-hover:text-secondary">About</a>
+            <a x-link href="/blog" class="relative z-30 block px-2 font-body text-lg font-medium text-primary transition-colors group-hover:text-green dark:text-white dark:group-hover:text-secondary">Blog</a>
           </li>
 
           <li class="group relative mr-6 mb-1">
@@ -44,11 +44,11 @@
           </li>
         </ul>
       </div>
-    </div>
-  </div>
+    </nav>
+  </navbar>
 
-  <div class="pointer-events-none fixed inset-0 z-50 flex bg-black bg-opacity-80 opacity-0 transition-opacity lg:hidden" :class="isMobileMenuOpen ? 'opacity-100 pointer-events-auto' : ''">
-    <div class="ml-auto bg-green p-4 transition-width transition-slowest ease" :class="isMobileMenuOpen ? 'w-2/3 md:w-1/3' : 'w-0'">
+  <aside class="pointer-events-none fixed inset-0 z-50 flex bg-black bg-opacity-80 opacity-0 transition-opacity lg:hidden" :class="isMobileMenuOpen ? 'opacity-100 pointer-events-auto' : ''">
+    <nav class="ml-auto bg-green p-4 transition-width transition-slowest ease" :class="isMobileMenuOpen ? 'w-2/3 md:w-1/3' : 'w-0'">
       <i class="cursor-pointer bx bx-x absolute top-0 right-0 mt-4 mr-4 text-4xl text-white" @click="isMobileMenuOpen = false"></i>
       <ul class="mt-8 flex flex-col">
         <li class="py-2">
@@ -56,18 +56,18 @@
         </li>
 
         <li class="py-2">
-          <a x-link @click="isMobileMenuOpen = false" href="/blog" class="mb-3 block px-2 font-body text-lg font-medium text-white">Blog</a>
+          <a x-link @click="isMobileMenuOpen = false" href="/about" class="mb-3 block px-2 font-body text-lg font-medium text-white">About</a>
         </li>
 
         <li class="py-2">
-          <a x-link @click="isMobileMenuOpen = false" href="/about" class="mb-3 block px-2 font-body text-lg font-medium text-white">About</a>
+          <a x-link @click="isMobileMenuOpen = false" href="/blog" class="mb-3 block px-2 font-body text-lg font-medium text-white">Blog</a>
         </li>
 
         <li class="py-2">
           <a x-link @click="isMobileMenuOpen = false" href="/contact" class="mb-3 block px-2 font-body text-lg font-medium text-white">Contact</a>
         </li>
       </ul>
-    </div>
-  </div>
+    </nav>
+  </aside>
 
 </div>
