add template to app name, seperate more files, fix

--- a/components/contact-form.html
+++ b/components/contact-form.html
@@ -5,12 +5,12 @@
       <input type="text" id="name" name="name" required placeholder="What should I call you?" class="w-full border border-primary bg-grey-lightest px-5 py-4 font-body font-light text-primary placeholder-primary transition-colors focus:border-secondary focus:outline-none focus:ring-2 focus:ring-secondary dark:text-white" />
     </div>
     <div class="w-full pt-6 sm:ml-3 sm:w-1/2 sm:pt-0">
-      <label class="block pb-3 font-body font-medium text-primary dark:text-white">Email Address</label>
-      <input type="email" id="email" name="email" required placeholder="Drop that email here…" class="w-full border border-primary bg-grey-lightest px-5 py-4 font-body font-light text-primary placeholder-primary transition-colors focus:border-secondary focus:outline-none focus:ring-2 focus:ring-secondary dark:text-white" />
+      <label class="block pb-3 font-body font-medium text-primary dark:text-white">Your Email</label>
+      <input type="email" id="email" name="email" required placeholder="Drop your email here…" class="w-full border border-primary bg-grey-lightest px-5 py-4 font-body font-light text-primary placeholder-primary transition-colors focus:border-secondary focus:outline-none focus:ring-2 focus:ring-secondary dark:text-white" />
     </div>
   </div>
   <div class="w-full pt-6 sm:pt-10">
-    <label class="block pb-3 font-body font-medium text-primary dark:text-white">Email Address</label>
+    <label class="block pb-3 font-body font-medium text-primary dark:text-white">Your Message</label>
     <textarea id="message" name="message" cols="30" rows="9" required placeholder="Tell me all the things that you think I need to hear…" class="w-full border border-primary bg-grey-lightest px-5 py-4 font-body font-light text-primary placeholder-primary transition-colors focus:border-secondary focus:outline-none focus:ring-2 focus:ring-secondary dark:text-white"></textarea>
   </div>
   <button type="submit" class="mt-10 mb-12 block bg-secondary px-10 py-4 text-center font-body text-xl font-semibold text-white transition-colors hover:bg-green sm:inline-block sm:text-left sm:text-2xl">Send Message</button>
