--- a/components/my-story.html
+++ b/components/my-story.html
@@ -3,12 +3,6 @@
     <img src="/assets/img/icon-story.png" alt="icon story" />
     <h3 class="ml-3 font-body text-2xl font-semibold text-primary dark:text-white">My Story</h3>
   </div>
-  <div>
-    <p class="font-body font-light text-primary dark:text-white">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nibh mauris cursus mattis molestie. Et leo duis ut diam. Sit amet tellus cras adipiscing enim eu turpis. Adipiscing at in tellus integer feugiat.
-      <br />
-      <br />
-      Maecenas accumsan lacus vel facilisis. Eget egestas purus viverra accumsan in nisl nisi scelerisque eu. Non tellus orci ac auctor augue mauris augue neque gravida. Auctor augue mauris augue neque gravida in fermentum et sollicitudin. Tempus urna et pharetra pharetra massa massa ultricies mi quis. Amet mauris commodo quis imperdiet massa. Integer vitae justo eget magna fermentum iaculis eu non.
-    </p>
+  <div x-cloak x-include.markdown="content/app-description.md" class="font-body font-light text-primary dark:text-white">
   </div>
 </div>
