--- a/partials/footer.html
+++ b/partials/footer.html
@@ -7,16 +7,21 @@
       <a x-link href="/" class="mr-auto sm:mr-6">
         <img src="/assets/img/logo-alpinejs.svg" alt="AlpineJS logo" class="h-8" />
       </a>
-      <p class="pt-5 font-body font-light text-primary dark:text-white sm:pt-0">&copy;2023 John Doe.</p>
+      <p class="pt-5 font-body font-light text-primary dark:text-white sm:pt-0">&copy;2023 <a class="font-semibold hover:text-secondary dark:hover:text-secondary transition-colors" href="https://revert.pl/" title="Open Revert.pl page" target="_blank" rel="noopenner">John Doe</a></p>
     </div>
 
     <div class="ml-auto flex justify-end items-center pt-5 sm:mr-0 sm:pt-0">
-      <a href="https://github.com/" title="Open GitHub" target="_blank" rel="noopenner">
-        <i class="text-4xl text-primary dark:text-white pl-5 hover:text-secondary dark:hover:text-secondary transition-colors bx bxl-github"></i>
+
+      <a href="https://alpinejs.dev/" title="Open AlpineJS page" target="_blank" rel="noopenner">
+        <i role="img" aria-labe="JavaScript icon" class="text-4xl text-primary dark:text-white pl-5 hover:text-secondary dark:hover:text-secondary transition-colors bx bxl-javascript"></i>
       </a>
 
-      <a href="https://www.linkedin.com/" title="Open LinkedIn" target="_blank" rel="noopenner">
-        <i class="text-4xl text-primary dark:text-white pl-5 hover:text-secondary dark:hover:text-secondary transition-colors bx bxl-linkedin"></i>
+      <a href="https://tailwindcss.com/" title="Open TailwindCSS page" target="_blank" rel="noopenner">
+        <i role="img" aria-labe="TailwindCSS icon" class="text-4xl text-primary dark:text-white pl-5 hover:text-secondary dark:hover:text-secondary transition-colors bx bxl-tailwind-css"></i>
+      </a>
+
+      <a href="https://github.com/riwert/alpinejs-spa-template" title="Open GitHub repo (may not be public yet)" target="_blank" rel="noopenner">
+        <i role="img" aria-labe="GitHub icon" class="text-4xl text-primary dark:text-white pl-5 hover:text-secondary dark:hover:text-secondary transition-colors bx bxl-github"></i>
       </a>
     </div>
   </div>
