--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -50,3 +50,11 @@ h2 {
 h3 {
   @apply font-body text-2xl md:text-3xl lg:text-4xl font-semibold text-primary dark:text-white;
 }
+
+.markdown {
+  h1,
+  h2,
+  h3 {
+    @apply my-6 border-b border-grey-lighter;
+  } 
+}
